# tauri-plugin-printer

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE  Notes.md  README.md  package.json  tsconfig.json
lib/: constants.ts  index.ts  interface.ts  mock.ts  types.ts
src/: declare.rs  fsys.rs  lib.rs  unix.rs  windows.rs
templates/: print.html
test/: printer.test.js
