[package]
name = "tauri-plugin-printer"
version = "0.2.4"
edition = "2021"
authors = ["Alfian Lensun <alfianlensundev@gmail.com>"]
description = "Tauri Plugin for printer access"
homepage = "https://crates.io/crates/tauri-plugin-printer"
readme = "README.md"
rust-version = "1.60"
exclude = ["/examples"]
keywords = [
    "tauri",
    "printer",
    "print",
    "printing",
    "json"
]
categories = [
    "os",
    "os::windows-apis"
]
license = "MIT"
repository = "https://github.com/alfianlensundev/tauri-plugin-printer"


[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "shell-open"] }

